<resources
    xmlns:tools="http://schemas.android.com/tools" tools:locale="tr">
    <string name="app_name">Healthy App</string>

    <array name="tab_name">
        <item>Ana Sayfa</item>
        <item>Yemek</item>
        <item>Su</item>
        <item>Hatırlatıcı</item>
        <item>Adım Sayar</item>
    </array>

    <string name="home_fragment">Ana Sayfa</string>
    <string name="reminder_fragment">Hatırlatıcı </string>
    <string name="food_fragment">Yemek </string>
    <string name="water_fragment">Su </string>
    <string name="out_of_range">Lütfen geçerli bir değer giriniz</string>
    <string name="bmi_2low_index">Vücut kitle indeksiniz çok düşük</string>
    <string name="bmi_low_index">Vücut kitle indeksiniz düşük</string>
    <string name="bmi_normal_index">Vücut kitle indeksiniz ortalama</string>
    <string name="bmi_high_index">Vücut kitle indeksiniz yüksek</string>
    <string name="bmi_2high_index">Vücut kitle indeksiniz çok yüksek</string>
    <string name="bmi_obese">Vücut kitle indeksiniz obez düzeyinde</string>
    <string name="bmi_type_error">Lütfen boyunuzu metre cinsinden girin</string>
    <string name="bmi_input_request">Lütfen Boyunuzu ve </string>
    <string name="bmi_input_request2">Kilonuzu seçin</string>
    <string name="welcome_text">Hoşgeldiniz !</string>
    <string name="profile_home">Ana Sayfa</string>
    <string name="content_show_bmi">Vücut Kitle Indeksiniz :</string>
    <string name="default_show_bmi">BMI :</string>
    <string name="content_show_result">Sonucları Goster</string>
    <string name="default_show_result">Sonuç :</string>
    <string name="empty_string" />
    <string name="text_label_kg">Kg</string>
    <string name="text_label_m">M</string>
    <string name="text_button_calculate">HESAPLA</string>
    <string name="weight">Kilo</string>
    <string name="minimum_kg_value">50 Kg</string>
    <string name="Height">Uzunluk</string>
    <string name="minimum_height_value">100 cm</string>
    <string name="title_home">Ana Sayfa</string>
    <string name="title_reminder">Hatırlatıcı</string>
    <string name="title_food">Yemek</string>
    <string name="title_water">Su</string>
    <string name="text_button_proceed">ILERI</string>
    <string name="required_amount_of_water">Tüketmeniz gereken su miktarı ..</string>
    <string name="liter">Litre</string>
    <string name="reminder_title">Başlık</string>
    <string name="reminder_text">Alarm Mesajı</string>
    <string name="reminder_amount">Alarm Sıklığı</string>
    <string name="set_alarm">Alarmı Kur</string>
    <string name="_00_00_utc">00:00 UTC</string>
    <string name="choose_notify">Bildirim Gönder</string>
    <string name="not_set">Kurulu Değil</string>
    <string name="time_format">HH:mm</string>
    <string name="dateFormat">dd/MM/yyyy</string>
    <string name="pick_hour">Saat Seç</string>
    <string name="delete">SİL</string>
    <string name="edit">DÜZENLE</string>
    <string name="negative">No</string>
    <string name="positive">YES</string>
    <string name="selected_value_removed">Alarm listeden kaldırıldı</string>
    <string name="message">Mesaj</string>
    <string name="dateTime_text">Tarih</string>
    <string name="alert_type">Uyarı Tipi</string>
    <string name="notification">Bildirim</string>
    <string name="alert">Alarm</string>
    <string name="are_you_sure_want_to_delete">Seçili hatırlatıcıyı silmek istediğinizden emin misiniz ?</string>
    <string name="warning">Uyarı</string>
    <string name="pick_target">Hedef Belirle</string>
    <string name="title_pedometer">Adımsayar</string>
    <string name="ten_thousand">10.000</string>
    <string name="steps">adım</string>
    <string name="average">Ortalama</string>
    <string name="total">Toplam</string>
    <string name="_50">50</string>
    <string name="_500">500</string>
    <string name="value_time_format">%02d:%02d:%02d</string>
    <string name="no_sensor">Algılayıcı Bulunamadı</string>
    <string name="no_sensor_explain">Cihazınıza bağlı bir sensör algılayıcısı bulunamamakta</string>
    <string name="select_target">Hedef Seçin</string>
    <string name="highest">En Yüksek</string>
    <string name="weekly_total">7 Gün Toplamı</string>
    <string name="weekly_average">7 Günün Ortalaması</string>
    <string name="monthly_total">1 Ay Toplamı</string>
    <string name="monthly_average">Bu ayın ortalaması</string>
    <string name="ok">Tamam</string>
    <string name="daily_target_completed">Hedef Tamamlandı</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="info">Hakkında</string>
    <string name="language_preferences">Dil Seçimi</string>
    <string name="calories">Kalori</string>
    <string name="water">Su</string>
    <string name="reminder">Hatırlatıcı</string>
    <string name="total_steps">Toplam Adım</string>
    <string name="total_calories">Toplam Kalori</string>
    <string name="turkish">Türkçe</string>
    <string name="english">English</string>
    <string name="pick_language">Dil Seçimi Yapınız</string>
    <string name="cancel">IPTAL</string>
    <string name="editing_complete">Düzenleme Tamamlandı</string>
    <string name="alarm_has_been_set">Alarm Kuruldu</string>
    <string name="about">Hakkında</string>
    <string name="water_amount_daily">0 / 2.4 L</string>
    <string name="add_value">Su Ekle (mL)</string>
    <string name="_250ml">250mL</string>
    <string name="_330ml">330mL</string>
    <string name="_500ml">500mL</string>
    <string name="_1l">1L</string>
    <string name="created_by">Hazırlayan: </string>
    <string name="Ugurcan_Celebi">Uğurcan Çelebi</string>
    <string name="search">Arama :</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor volutpat tempor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus ac tellus id lacus scelerisque bibendum a vel justo. In dignissim ac ipsum malesuada eleifend. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis finibus at libero et finibus. Quisque efficitur viverra nisi non accumsan. Vivamus in urna nisl. Duis vehicula dictum facilisis. Pellentesque id porta nisi, eget aliquam enim. Quisque facilisis faucibus felis, a lobortis tellus accumsan ut. Fusce sit amet erat augue. Suspendisse varius diam et elementum lacinia.</string>
    <string name="add">Ekle</string>
    <string name="food_added_calory">Yemek kalori listesine eklendi..</string>
    <string name="add_calory">Kalori Ekle</string>
    <string name="restart_device">Türkçe arayüz için lütfen uygulamayı yeniden başlatınız.</string>
    <string name="water_amount_added">Değer günlük havuza eklendi</string>

    <string name="next">ILERI</string>
    <string name="skip">ATLA</string>
    <string name="start">BAŞLA</string>

    <string name="slide_1_title">Hoşgeldiniz !</string>
    <string name="slide_1_desc">HealthyApp sizin sağlıklı ve düzenli bir yaşam sürdürmenizi amaçlar.</string>

    <string name="slide_2_title">Kalori / Su Takibi</string>
    <string name="slide_2_desc">Günlük tükettiğiniz su ve kalori miktarını görüntüleyin.</string>

    <string name="slide_3_title">Adımsayar</string>
    <string name="slide_3_desc">Adım sayar ile günlük gerekli adım sayısını takip edin. Haftalık şablon ile sonuçlarınızı görüntüleyin.</string>

    <string name="slide_4_title">Hatırlatıcı</string>
    <string name="slide_4_desc">Su, yürüyüş veya ilaç hatırlatıcısı ile programlarınızı takip edin.</string>
    <string name="amount_has_been_removed">Değer günlük havuzdan çıkarıldı</string>
    <string name="target">Hedef</string>
    <string name="clean">Temizle</string>
    <string name="sure_to_clean">Miktarı temizlemek istediğinizden emin misiniz ? </string>
</resources>