<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/bmi_calculator_animation_list"
    android:id="@+id/layout_bmi_calculator"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_marginBottom="5dp"
        android:id="@+id/bmiTitle"
        android:textColor="@color/violet"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:textSize="50sp"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txtBMIValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />
    <TextView
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/bmi_input_request"
        android:id="@+id/txtResultBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>
    <TextView
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/bmi_input_request2"
        android:id="@+id/txtRequiredAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/bmiValuesLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <NumberPicker
            android:id="@+id/numberPickerWeight"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <NumberPicker
            android:id="@+id/numberPickerHeight"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/bmiValueTypeLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textAlignment="center"
            android:text="@string/text_label_kg"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textAlignment="center"
            android:text="@string/text_label_m"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:id="@+id/transition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_background_red"
            android:layout_marginTop="20dp"
            android:text="@string/text_button_calculate"
            android:id="@+id/btnBMISubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:visibility="gone"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_background"
            android:text="@string/text_button_proceed"
            android:id="@+id/btnBMIProceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_margin="10dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textAlignment="center"
            android:id="@+id/textCurrentTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>