<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chrome_grey"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <org.eazegraph.lib.charts.PieChart
        xmlns:eaze="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        android:id="@+id/pedometerPieChart"
        eaze:egLegendHeight="0dp"
        eaze:egInnerPadding="75"
        eaze:egHighlightStrength="1"
        android:visibility="visible"
        android:layout_height="200dp"/>

    <TextView
        android:id="@+id/textViewPedometerStepCount"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ten_thousand"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/pedometerPieChart"
        app:layout_constraintRight_toRightOf="@id/pedometerPieChart"
        app:layout_constraintStart_toStartOf="@+id/pedometerPieChart"
        app:layout_constraintTop_toTopOf="@id/pedometerPieChart" />

    <TextView
        android:textAlignment="center"
        android:text="@string/steps"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/textViewPedometerStepCount"
        app:layout_constraintTop_toBottomOf="@id/pedometerPieChart"
        />

    <LinearLayout
        android:id="@+id/layoutResultsPedometer"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/pedometerPieChart">
        <TextView
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_weight="1"
            android:text="@string/_50"
            android:id="@+id/textViewPedometerAverageSteps"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_weight="1"
            android:text="@string/_50"
            android:id="@+id/textViewTarget"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/_500"
            android:id="@+id/textViewPedometerTotalSteps"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutVariablePedometer"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintTop_toBottomOf="@id/layoutResultsPedometer"
            app:layout_constraintBottom_toTopOf="@+id/pedometerBarChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            >
            <TextView
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_weight="1"
                android:text="@string/average"
                android:id="@+id/tvPedometerAverageSteps"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_weight="1"
                android:text="@string/target"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="@string/total"
                android:id="@+id/tvPedometerTotalSteps"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>


    <org.eazegraph.lib.charts.BarChart
        android:id="@+id/pedometerBarChart"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutVariablePedometer"
        android:layout_width="match_parent"
        android:layout_height="160dp"/>

    <ImageButton
        android:id="@+id/imageButtonTarget"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@color/transparent"
        android:contentDescription="@string/title_pedometer"
        android:src="@drawable/ic_settings"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>